# yolo-sam

./: .env.example  .gitignore  Quickstart  README.md  client.py  env.example  logs.txt  logs_debug.txt  pyproject.toml  pytest.ini  samconfig.toml  template.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
detection/: Dockerfile  app.py  coco.py  config.py  onnx_detector.py  requirements.txt  utils.py  yolov8_onnx.py
docs/: index.html  script.js  style.css  woodcut_layout.css
scripts/: inspect_onnx.py  setup_config.sh
tests/: fixtures.py  utils.py
tests/deployment/: test_deployment.py
tests/integration/: test_api_gateway.py  test_integration.py
tests/performance/: test_benchmark.py
tests/unit/: test_handler.py  test_unit.py
utils/: ExportONNX.sh
